k8s-3tier-app/00-sgh-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name:  sgh-web-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name:  sgh-was-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name:  sgh-db-ns
