k8s-3tier-app/06-sgh-Deployment-was.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sgh-was-dpl
  namespace: sgh-was-ns
  labels:
    app: sgh-was
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sgh-was
  template:
    metadata:
      labels:
        app: sgh-was
    spec:
      containers:
        - name: tomcat
          image: shinkiho/sgh-was:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /sgh/
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /sgh/
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 20
            timeoutSeconds: 3
