k8s-3tier-app/07-sgh-Deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sgh-web-dpl
  namespace: sgh-web-ns
  labels:
    app: sgh-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sgh-web
  template:
    metadata:
      labels:
        app: sgh-web
    spec:
      containers:
        - name: httpd
          image: shinkiho/sgh-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /sgh/
              port: 80
            initialDelaySeconds: 10
            timeoutSeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /sgh/
              port: 80
            initialDelaySeconds: 30
            timeoutSeconds: 3
            periodSeconds: 20
